--- a/style.css
+++ b/style.css
@@ -4,26 +4,130 @@ body {
     justify-self: center;
     align-items: center;
     text-align: center;
+    background-color: rgb(0, 107, 121);
+    color: white;
 }
 
-.board-container {
-    padding: 10px
+input {
+    font-size: 1rem;
+    padding: 0.2rem;
 }
 
-.boardrow-one,
-.boardrow-two,
-.boardrow-three {
+.header-text {
+    font-size: 5rem;
+    font-family: 'Yatra One';
+    margin: 50px;
+}
+
+.form-header-text {
+    font-size: 2rem;
+    margin-top: 0px;
+    font-family: 'Tilt Neon';
+}
+
+.form-text {
+    font-size: 1rem;
+    margin-top: 0px;
+    font-family: 'Tilt Neon';
+    color: rgb(235, 235, 97);
+}
+
+
+.board {
+    display: block;
+    padding: 10px;
     display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    width: 330px;
+    height: 330px;
+    margin: 20px;
 }
-
 
 .cell {
-    height: 50px;
-    width: 50px;
-    padding: 10px;
-    border: 1px solid black
+    height: 100px;
+    width: 100px;
+    outline: 2px solid rgb(255, 255, 255);
+    border-radius: 10px;
+    font-size: 5rem;
+}
+
+.cell:hover {
+    transform: scale(1.05);
+    outline: 3px solid rgb(243, 245, 105);
+    cursor: pointer;
 }
 
 .hidden {
-    visibility: hidden;
+    display: none
+}
+
+.selection-container {
+    padding: 30px 40px 50px 40px;
+    font-size: 1.2rem;
+    color: rgb(255, 255, 255);
+    background-color: rgb(114, 114, 114);
+    border-radius: 15px;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+    gap: 10px;
+    font-family: 'Tilt Neon';
+}
+
+.form-row {
+    display: flex;
+    flex-direction: column;
+    text-align: justify;
+}
+
+#startgame {
+    margin-top: 25px;
+    padding: 0px;
+    height: 30px;
+    font-size: 1rem;
+    font-family: 'Tilt Neon';
+    outline: none;
+    border: none;
+    background-color: rgb(235, 235, 97);
+}
+
+.restart,
+.current-turn-text {
+    font-size: 1.5rem;
+    margin: 0px;
+    font-family: 'Tilt Neon';
+}
+
+#current-turn {
+    font-size: 3rem;
+    font-family: 'Yatra One';
+    margin: 5px;
+}
+
+.footer {
+	position: absolute;
+	margin-top: 10px;
+    font-family: 'Tilt Neon', cursive;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+	align-self: center;
+}
+
+.strike {
+    text-decoration: line-through;
+}
+
+.restart  {
+    margin-top: 20px;
+}
+
+.restart:hover {
+    cursor: pointer;
+    color: rgb(235, 235, 97);
 }
